bugfix(app) Fix hamburger menu with modals on mobile

--- a/app/assets/stylesheets/app/header.sass
+++ b/app/assets/stylesheets/app/header.sass
@@ -83,6 +83,7 @@
 
 @media only screen and (max-width: $screen-sm-max)
   .navbar.navbar-default
+    z-index: 901
     .container
       .search-container
         display: none
