--- a/client/assets/stylesheets/_modal.sass
+++ b/client/assets/stylesheets/_modal.sass
@@ -17,7 +17,7 @@ $modal-padding: 25px
 
 .app
   .ReactModal__Overlay
-    z-index: 999999
+    z-index: 900
     background-color: rgba(33,33,33,0.7)
     position: relative
     display: flex
